tests/snapshots/unexpected_eof__add_expr_no_rhs.snap
---
source: tests/unexpected_eof.rs
expression: stderr

---
error: Expected literal, found end of file
      |
    1 | please add 5 t
      |               ^
      |

A literal is either absent, null, novalue, undefined, True, False, a number, a string or an identifier. Yours is neither of them.
You could use a number literal with the value 7.

